--- a/crates/rollup/Cargo.toml
+++ b/crates/rollup/Cargo.toml
@@ -1,21 +1,42 @@
 [package]
-name = "sov_rollup_starter"
+name = "sov-rollup-starter"
 resolver = "2"
 version = { workspace = true }
 edition = { workspace = true }
 authors = { workspace = true }
 
 [dependencies]
+# Adapters
+sov-mock-da = { workspace = true, features = ["native"], optional = true }
+sov-risc0-adapter = { workspace = true, features = ["native"] }
+# Full Node
+sov-prover-storage-manager = { workspace = true }
+sov-stf-runner = { workspace = true, features = ["native"] }
+sov-db = { workspace = true }
+# Module System
+sov-modules-rollup-blueprint = { workspace = true }
+sov-modules-api = { workspace = true, features = ["native"] }
+sov-state = { workspace = true }
+sov-modules-stf-blueprint = { workspace = true, features = ["native"] }
+# Rollup Interface
+sov-rollup-interface = { workspace = true }
+
+risc0-starter = { path = "../provers/risc0" }
+stf-starter = { path = "../stf", features = ["native"] }
+
 serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tokio  = { workspace = true }
+async-trait = { workspace = true }
+jsonrpsee = { workspace = true }
 
 [features]
 default = ["mock_da"]
-mock_da = []
+mock_da = ["sov-mock-da"]
 celestia_da = []
 
 [[bin]]
