feat: cli wallet

--- a/crates/rollup/Cargo.toml
+++ b/crates/rollup/Cargo.toml
@@ -42,3 +42,7 @@ celestia_da = []
 [[bin]]
 name = "node"
 path = "src/bin/node.rs"
+
+[[bin]]
+name = "starter-cli-wallet"
+path = "src/bin/starter_cli_wallet.rs"
