--- a/crates/provers/risc0/Cargo.toml
+++ b/crates/provers/risc0/Cargo.toml
@@ -8,4 +8,4 @@ edition = { workspace = true }
 risc0-build = { workspace = true }
 
 [package.metadata.risc0]
-methods = ["guest-mock"]
+methods = ["guest-mock", "guest-celestia"]
